<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SampleBleDeviceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/getPeriodBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_period" />

        <EditText
            android:id="@+id/periodEdit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/period"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_millis" />

        <Button
            android:id="@+id/setPeriodBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_period" />

    </LinearLayout>

    <Button
        android:id="@+id/sendOnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_on" />

    <Button
        android:id="@+id/sendOffBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_off" />

    <TextView
        android:id="@+id/dataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>